Small reordering of titles

--- a/11-step-by-step-build.Rmd
+++ b/11-step-by-step-build.Rmd
@@ -13,7 +13,7 @@ This parts encompasses the integration of the back-end/front-end, together, and 
 + linking to CI / CD services
 + check
 
-### Add dependencies
+## Add dependencies
 
 Every time you add a new dependency, you can add it with:
 
@@ -27,7 +27,7 @@ Note that all the explicitly namespaced calls (_i.e_ `pkg::fun`) can be scraped 
 attachment::att_from_rscripts()
 ```
 
-### Submodules and utility functions
+## Submodules and utility functions
 
 Two functions can be called to add utility functions: 
 
@@ -39,7 +39,7 @@ golem::add_utils( "helpers" )
 + The first will create a `R/fct_helpers.R` file
 + The second will create a `R/utils_helpers.R` file
 
-### Add tests
+## Add tests
 
 You can add more tests to your application with:
 
