--- a/17-optimizing-shiny-code.Rmd
+++ b/17-optimizing-shiny-code.Rmd
@@ -525,7 +525,7 @@ shinyApp(ui, server)
 In that case, instead of waiting for the very last input, you will need to build a structure that will receive the output, check if this output is the "next in line", store it if it is not, or return it if it is and see if there is another output in the queue. 
 This type of implementation is a little bit more complex so we will not detail it all inside this chapter, but here is a small implementation  using `{liteq}`. 
 
-```{r}
+```{r 17-optimizing-shiny-code-17}
 library(liteq)
 db <- tempfile()
 q <- ensure_queue("jobs", db = db)
@@ -542,6 +542,6 @@ for (i in 1:5){
 ```
 
 
-```{r include = FALSE, error = TRUE}
+```{r 17-optimizing-shiny-code-18, include = FALSE, error = TRUE}
 try(fs::dir_delete(tpd))
 ```
