--- a/index.Rmd
+++ b/index.Rmd
@@ -52,13 +52,13 @@ Very few (if any) talk about this grey area between getting started and pushing 
 So this is what this book is going to talk about: building Shiny application. 
 We'll focus on the process, the workflow, and the tools we use at ThinkR when building big Shiny Apps.
 
-Hence, if you're starting to read this book, we assume you have a working knowledge of how to build a small application, and want to know how to go one step further. 
+Hence, if you are starting to read this book, we assume you have a working knowledge of how to build a small application, and want to know how to go one step further. 
 
 ## Book structure {-}
 
-+ Part 1 (Building big Shiny Apps) gives a general context about what is a successful Shiny Apps and what challenges arise when you're dealing with a large scale application. 
++ Part 1 (Building big Shiny Apps) gives a general context about what is a successful Shiny Apps and what challenges arise when you are dealing with a large scale application. 
 It also introduces the `{golem}` package and more general concept about organising your workflow. 
-This first part will be light on code: you'll read more about conceptual ideas and organisation strategy. 
+This first part will be light on code: you will read more about conceptual ideas and organisation strategy. 
 
 + Part 2 to 6 describes a series of steps you can take when you want to build a Shiny App, and the tooling associated with each step.
 
@@ -101,7 +101,7 @@ Feel free to [open an issue](https://github.com/ThinkR-open/building-shiny-apps-
 
 I used the **knitr**\index{knitr} package [@xie2015] and the **bookdown**\index{bookdown} package [@R-bookdown] to compile my book. My R session information is shown below:
 
-```{r}
+```{r index-2 }
 xfun::session_info()
 ```
 
@@ -117,7 +117,7 @@ Package names are in curly brackets in code format (e.g., `{rmarkdown}`), and in
 
 // TODO : 
 
-```{r index-2, echo = FALSE}
+```{r index-3, echo = FALSE}
 # Some internal funs
 right_link <- function(text, link){
   htmltools::tagList(
@@ -170,7 +170,7 @@ if (!requireNamespace("cloc")){
 
 ```
 
-```{r index-3, include=FALSE}
+```{r index-4, include=FALSE}
 # automatically create a bib database for R packages
 knitr::write_bib(c(
   .packages(), 'bookdown', 'knitr', 'rmarkdown'
